--- a/GLidenUI/configDialog.ui
+++ b/GLidenUI/configDialog.ui
@@ -874,6 +874,9 @@
                 <property name="text">
                  <string>Arial</string>
                 </property>
+                <property name="alignment">
+                 <set>Qt::AlignCenter</set>
+                </property>
                </widget>
               </item>
               <item row="1" column="1">
@@ -883,6 +886,9 @@
                 </property>
                 <property name="text">
                  <string>Green</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignCenter</set>
                 </property>
                </widget>
               </item>
@@ -944,7 +950,7 @@
                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Select path to HD textures packs&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                 </property>
                 <property name="text">
-                 <string>Select</string>
+                 <string>Choose</string>
                 </property>
                </widget>
               </item>
